--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -85,22 +85,64 @@
   <div class="max-w-md w-full p-6">
     <h1 class="text-3xl font-semibold mb-6 text-black text-center">Login</h1>
  
-    <form [formGroup]="form" (ngSubmit)="login()">
+    <form *ngIf="!verificationCodeEntered" [formGroup]="form" (ngSubmit)="login()">
       <div>
         <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
-        <input type="email" formControlName="username" id="username" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required>
+        <input [ngStyle]="{'border': inputError ? '3px solid red' : 'none'}" type="email" formControlName="username" id="username" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required>
       </div>
       <div>
         <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-        <input type="password" formControlName="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
+        <div class="bg-white relative flex items-center border border-gray-500 focus:ring focus:border-blue-500 rounded">
+          <input 
+            [type]="showPassword ? 'text' : 'password'" 
+            placeholder="••••••••" 
+            formControlName="password"
+            id="password" 
+           
+            [ngStyle]="{'border': inputError ? '3px solid red' : 'none'}"
+            class="g-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
+          />
+          <a  *ngIf="!showPassword"
+            class="text-sm font-bold bg-white text-blue-700 hover:bg-blue-100 rounded-full px-2 py-1 mr-1 leading-normal cursor-pointer" 
+            (click)="togglePasswordVisibility()"
+          >
+          <svg x-show="!isshow" aria-hidden="true" class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
+          </svg>    
+          </a>
+          <a  *ngIf="showPassword"
+          class="text-sm font-bold bg-white text-blue-700 hover:bg-blue-100 rounded-full px-2 py-1 mr-1 leading-normal cursor-pointer" 
+          (click)="togglePasswordVisibility()"
+        >
+        Hide                          
+        </a>
+        </div>
       </div>
       <div class="flex items-center justify-between">
      
         <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500 my-4">Forgot password?</a>
   
       </div>
-      <button type="submit" class="w-full bg-blue-500 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white dark:bg-blue-500 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign in</button>
+      <button 
+      
+      type="submit" class="w-full bg-blue-500 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white dark:bg-blue-500 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign in</button>
     </form>
+
+    <ng-container *ngIf="verificationCodeEntered">
+  
+      <form class="space-y-4 md:space-y-6" [formGroup]="verificationForm" (ngSubmit)="verifyCode()">
+   
+        <div>
+          <label for="verification-code" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Verification Code with Authontificator locked</label>
+          <input type="text" formControlName="verificationCode" id="verification-code" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter verification code" required>
+        </div>
+           
+        <button type="submit" class="w-full bg-blue-500 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white dark:bg-blue-500 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Verify Code</button>
+      </form>
+      
+ 
+     </ng-container>
   <!-- Sign up  Link -->
   <div class="mt-6 text-blue-500 text-center">
     <a  routerLink="/register" href="#" class="hover:underline">Sign up Here</a>
