--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -80,8 +80,8 @@
                   <!-- Active: "bg-gray-100", Not Active: "" -->
                   <a [routerLink]="['/profile', userId]"class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                       id="user-menu-item-0">Your Profile</a>
-                      <a routerLink="/settings"class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                      id="user-menu-item-0">Settings</a>
+                      <button (click)="toggleSettings()" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                      id="user-menu-item-0">Settings</button>
               
                   <a href="#" (click)="signOut()"
                       class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
@@ -94,56 +94,8 @@
 </nav>
 
 <!-- Formulaire de modification -->
-<div *ngIf="isSettingsOpen" class="fixed inset-0 bg-gray-500 bg-opacity-50 z-20 flex items-center justify-center">
-  <div class="absolute inset-0 backdrop-filter backdrop-blur-md"></div>
-  <div class="absolute inset-0 flex items-center justify-center">
-    <div class="mx-auto w-full max-w-[550px] bg-white rounded-lg overflow-hidden ">
-      <button (click)="closeSettings()" class="absolute top-4 right-4 text-gray-600 hover:text-gray-800 cursor-pointer">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-      </button>
-      <form class="py-6 px-9">
-        <div class="mb-5">
-          <label for="email" class="mb-3 block text-base font-medium text-[#07074D]">Send files to this email:</label>
-          <input type="email" name="email" id="email" placeholder="example@domain.com" class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
-        </div>
 
-        <div class="mb-6 pt-4">
-          <label class="mb-5 block text-xl font-semibold text-[#07074D]">Upload File</label>
-
-          <div class="mb-8">
-            <input type="file" name="file" id="file" class="sr-only" />
-            <label for="file" class="relative flex min-h-[200px] items-center justify-center rounded-md border border-dashed border-[#e0e0e0] p-12 text-center">
-              <div>
-                <span class="mb-2 block text-xl font-semibold text-[#07074D]">Drop files here</span>
-                <span class="mb-2 block text-base font-medium text-[#6B7280]">Or</span>
-                <span class="inline-flex rounded border border-[#e0e0e0] py-2 px-7 text-base font-medium text-[#07074D]">Browse</span>
-              </div>
-            </label>
-          </div>
-
-        
-
-          <div class="rounded-md bg-[#F5F7FB] py-4 px-8">
-            <div class="flex items-center justify-between">
-              <span class="truncate pr-3 text-base font-medium text-[#07074D]">banner-design.png</span>
-              <button class="text-[#07074D]">
-                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.279337 0.279338C0.651787 -0.0931121 1.25565 -0.0931121 1.6281 0.279338L9.72066 8.3719C10.0931 8.74435 10.0931 9.34821 9.72066 9.72066C9.34821 10.0931 8.74435 10.0931 8.3719 9.72066L0.279337 1.6281C-0.0931125 1.25565 -0.0931125 0.651788 0.279337 0.279338Z" fill="currentColor"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M0.279337 9.72066C-0.0931125 9.34821 -0.0931125 8.74435 0.279337 8.3719L8.3719 0.279338C8.74435 -0.0931127 9.34821 -0.0931123 9.72066 0.279338C10.0931 0.651787 10.0931 1.25565 9.72066 1.6281L1.6281 9.72066C1.25565 10.0931 0.651787 10.0931 0.279337 9.72066Z" fill="currentColor"></path></svg>
-              </button>
-            </div>
-            <div class="relative mt-5 h-[6px] w-full rounded-lg bg-[#E2E5EF]">
-              <div class="absolute left-0 right-0 h-full w-[75%] rounded-lg bg-[#6A64F1]"></div>
-            </div>
-          </div>
-        </div>
-
-        <div>
-          <button class="hover:shadow-form w-full rounded-md bg-[#6A64F1] py-3 px-8 text-center text-base font-semibold text-white outline-none">Send File</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-<div *ngIf="searchResults.length > 0" class="absolute shadow bg-white  z-40  lef-0 rounded max-h-[200px]  min-h-[200px] overflow-y-auto svelte-5uyqqj" style="margin-left:20%; margin-top: 260px; width: px;">
+<div *ngIf="searchResults.length > 0" class="absolute shadow bg-white  z-40  lef-0 rounded max-h-[200px]  min-h-[200px]  overflow-y-auto scrollbar-w-2 svelte-5uyqqj" style="margin-left:20%; margin-top: 260px; ">
   <div class="flex flex-col w-full">
       <div [routerLink]="['/profile', user.userId]" (click)="clickUserProfile(user.userId)"  *ngFor="let user of searchResults" class="cursor-pointer w-full border-gray-100 rounded-t border-b hover:bg-teal-100">
           <div class="flex w-full items-center p-2 pl-2 border-transparent border-l-2 relative hover:border-teal-100">
@@ -160,5 +112,23 @@
           </div>
       </div>
 
+  </div>
+</div>
+
+
+
+<div *ngIf="isSettingsOpen" class="fixed inset-0 bg-gray-500 bg-opacity-50 z-20 flex items-center justify-center mt-16">
+  <div class="absolute inset-0 backdrop-filter backdrop-blur-md"></div>
+  <div class="absolute inset-0 flex items-center justify-center">
+    <div class="mx-auto w-full max-w-[900px] bg-white rounded-lg overflow-hidden">
+      <div class="overflow-y-auto max-h-[500px]" id="commentContainer">
+        <!-- Contenu du formulaire de modification -->
+        <!-- Bouton de fermeture -->
+        <button   (click)="closeSettings()" class="absolute top-4 right-4 text-gray-600 hover:text-gray-800 cursor-pointer">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+        </button>
+      </div>
+    <app-settings></app-settings>
+    </div>
   </div>
 </div>
