--- a/src/app/pages/sidebarleft/sidebarleft.component.html
+++ b/src/app/pages/sidebarleft/sidebarleft.component.html
@@ -26,8 +26,28 @@
             alt=""> Profile
         </a>
         <a routerLink="/chat"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgyV15RiIvyU9pByAuP0udEojWzka5HYtoxQ&s" alt=""> Chat</a>
-        <a routerLink="/settings"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3iiQtlhS5YgzC4_u5L-tHpSlTI_V2XAtpFg&s" alt=""> Settings</a>
+        <a  (click)="toggleSettings()" class="cursor-pointer">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3iiQtlhS5YgzC4_u5L-tHpSlTI_V2XAtpFg&s" alt="">
+         Settings</a>
 
 
     </div>
 </div>
+
+
+<div *ngIf="isSettingsOpen" class="fixed inset-0 bg-gray-500 bg-opacity-50 z-20 flex items-center justify-center mt-16">
+    <div class="absolute inset-0 backdrop-filter backdrop-blur-md"></div>
+    <div class="absolute inset-0 flex items-center justify-center">
+      <div class="mx-auto w-full max-w-[900px] bg-white rounded-lg overflow-hidden">
+        <div class="overflow-y-auto max-h-[500px]" id="commentContainer">
+          <!-- Contenu du formulaire de modification -->
+          <!-- Bouton de fermeture -->
+          <button   (click)="closeSettings()" class="absolute top-4 right-4 text-gray-600 hover:text-gray-800 cursor-pointer">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+          </button>
+        </div>
+      <app-settings></app-settings>
+      </div>
+    </div>
+  </div>
+  
