--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -1,22 +1,19 @@
-
 <body>
-    
-<app-navbar class=" flex items-center w-full justify-between bg-nav-color sticky z-50  top-0  "></app-navbar>
-<!------------------ Profile Page  ------------->
+  <app-navbar
+    class="flex items-center w-full justify-between bg-nav-color sticky z-50 top-0"
+  ></app-navbar>
+  <!------------------ Profile Page  ------------->
 
-<div class="container">
-  <!-- ----------- LEFT-SIDEBAR----------- -->
-<app-sidebarleft class="  ml-10" ></app-sidebarleft>
-  <!-- ----------- MAIN-CONTENT----------- -->
-<app-post-feed></app-post-feed>
-  <!-- ----------- RIGHT-SIDEBAR----------- -->
-<app-sidebar-right class=" mr-10"></app-sidebar-right>
+  <div class="container">
+    <!-- ----------- LEFT-SIDEBAR----------- -->
+    <app-sidebarleft class="ml-10"></app-sidebarleft>
+    <!-- ----------- MAIN-CONTENT----------- -->
+    <app-post-feed></app-post-feed>
+    <!-- ----------- RIGHT-SIDEBAR----------- -->
+    <app-sidebar-right class="mr-10"></app-sidebar-right>
   </div>
- 
-    <div class="footer">
-        <p>Copyright 2023 - #Belghith-Adem</p>
-    </div>
 
-
-
+  <div class="footer">
+    <p>Copyright 2023 - #Belghith-Adem</p>
+  </div>
 </body>
