--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -1,125 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Page - SocialBook</title>
+  </head>
+  <body>
+    <app-navbar
+      class="flex items-center w-full justify-between bg-nav-color pb-1 sticky top-0 z-10"
+    ></app-navbar>
 
-
-
-
-</head>
-<body>
-    
-
-    <app-navbar class=" flex items-center w-full justify-between bg-nav-color  pb-1 sticky top-0 z-10  "></app-navbar>
-
-<!------------------ Profile Page  ------------->
+    <!------------------ Profile Page  ------------->
 
     <div class="profile-container">
-      
-
-        <div class="profile-info">
- 
-            <div class="info-col">
-                <div class="bg-white  rounded-lg   p-6 mb-4  ">
-                    <div class="flex justify-between items-center ">
-                        <h3 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Profile</h3>
-                        <a *ngIf="!isLinkDisabled" routerLink="/settings" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
-                            Change
-                        </a>
-                   </div>
-                    <div class="flex flex-col gap-1 text-center items-center mt-6">
-                        <img class="h-32 w-32 bg-white p-2 rounded-full shadow mb-4" 
-                        *ngIf="userProfile"
-                        [src]="userProfile.photoProfile ? 'http://localhost:8081/api/posts/image/' + userProfile.photoProfile :  'https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=2000&amp;q=80'" 
-                        alt="Profile Picture">
-                        <p class="font-semibold">{{ userProfile?.prenom }} {{ userProfile?.nom }}  </p>
-                        <div class="text-sm leading-normal text-gray-400 flex justify-center items-center">
-                        <svg viewBox="0 0 24 24" class="mr-1" width="16" height="16" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                        {{ userProfile?.currentCity }}     
-                        </div>
-                    </div>
-                    <div class="flex justify-center items-center gap-2 my-3">
-                        <div class="font-semibold text-center mx-4">
-                            <p class="text-black">{{ numberOfPosts }}</p>
-                            <span class="text-gray-400">Posts</span>
-                        </div>
-                        <div class="font-semibold text-center mx-4">
-                            <p class="text-black"> {{ userProfile?.followerCount }}  </p>
-                            <span class="text-gray-400">Followers</span>
-                        </div>
-                        <div class="font-semibold text-center mx-4">
-                            <p class="text-black"> {{ userProfile?.followingCount }}  </p>
-                            <span class="text-gray-400">Folowing</span>
-                        </div>
-                    </div>
-                </div>
- 
-
-                <div class="profile-intro rounded-lg ">
-                    <div class="tittle-box ">
-                        <h3>Frienda</h3>
-                        <a href="">All Frienda</a>
-                    </div>
-                    <p>1200 (10 mutual)</p>
-                    <div class="friends-box">
-                        <div class="rounded-lg "><img src="https://picsum.photos/1114" alt=""> <p>Joseph N</p></div>
-                        <div><img src="https://picsum.photos/1214" alt=""> <p>Nathan N</p></div>
-                        <div><img src="https://picsum.photos/1314" alt=""> <p>George D</p></div>
-                        <div><img src="https://picsum.photos/1414" alt=""> <p>Francis L</p></div>
-                        <div><img src="https://picsum.photos/1514" alt=""> <p>Anthony E</p></div>
-                        <div><img src="https://picsum.photos/1614"alt=""> <p>Michael A</p></div>
-                        <div><img src="https://picsum.photos/1714" alt=""> <p>Edward M</p></div>
-                        <div><img src="https://picsum.photos/1414"alt=""> <p>Bradon C</p></div>
-                        <div><img src="https://picsum.photos/1914" alt=""> <p>James Doe</p></div>
-                    </div>
-                </div>
-
+      <div class="profile-info">
+        <div class="info-col">
+          <div class="bg-white rounded-lg p-6 mb-4">
+            <div class="flex justify-between items-center">
+              <h3
+                class="text-xl font-bold leading-none text-gray-900 dark:text-white"
+              >
+                Profile
+              </h3>
+              <a
+                *ngIf="!isLinkDisabled"
+                routerLink="/settings"
+                class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500"
+              >
+                Change
+              </a>
             </div>
-            <div class="post-col">
-                
-      <form class="bg-white shadow rounded-lg  p-4">
-        <textarea [(ngModel)]="caption" name="message" placeholder="Type something..." class="w-full rounded-lg p-2 text-sm bg-gray-100 border border-transparent appearance-none rounded-tg placeholder-gray-400"></textarea>
-        <footer class="flex justify-between mt-2">
-            <div class="flex gap-2">
+            <div class="flex flex-col gap-1 text-center items-center mt-6">
+              <img
+                class="h-32 w-32 bg-white p-2 rounded-full shadow mb-4"
+                *ngIf="userProfile"
+                [src]="
+                  userProfile.photoProfile
+                    ? 'http://localhost:8081/api/posts/image/' +
+                      userProfile.photoProfile
+                    : 'https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=2000&amp;q=80'
+                "
+                alt="Profile Picture"
+              />
+              <p class="font-semibold">
+                {{ userProfile?.prenom }} {{ userProfile?.nom }}
+              </p>
+              <div
+                class="text-sm leading-normal text-gray-400 flex justify-center items-center"
+              >
+                <svg
+                  viewBox="0 0 24 24"
+                  class="mr-1"
+                  width="16"
+                  height="16"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
+                  ></path>
+                  <circle cx="12" cy="10" r="3"></circle>
+                </svg>
+                {{ userProfile?.currentCity }}
+              </div>
+            </div>
+            <div class="flex justify-center items-center gap-2 my-3">
+              <div class="font-semibold text-center mx-4">
+                <p class="text-black">{{ numberOfPosts }}</p>
+                <span class="text-gray-400">Posts</span>
+              </div>
+              <div class="font-semibold text-center mx-4">
+                <p class="text-black">{{ userProfile?.followerCount }}</p>
+                <span class="text-gray-400">Followers</span>
+              </div>
+              <div class="font-semibold text-center mx-4">
+                <p class="text-black">{{ userProfile?.followingCount }}</p>
+                <span class="text-gray-400">Folowing</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="profile-intro rounded-lg">
+            <div class="tittle-box">
+              <h3>Frienda</h3>
+              <a href="">All Frienda</a>
+            </div>
+            <p>1200 (10 mutual)</p>
+            <div class="friends-box">
+              <div class="rounded-lg">
+                <img src="https://picsum.photos/1114" alt="" />
+                <p>Joseph N</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1214" alt="" />
+                <p>Nathan N</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1314" alt="" />
+                <p>George D</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1414" alt="" />
+                <p>Francis L</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1514" alt="" />
+                <p>Anthony E</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1614" alt="" />
+                <p>Michael A</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1714" alt="" />
+                <p>Edward M</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1414" alt="" />
+                <p>Bradon C</p>
+              </div>
+              <div>
+                <img src="https://picsum.photos/1914" alt="" />
+                <p>James Doe</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="post-col">
+          <form class="bg-white shadow rounded-lg p-4">
+            <textarea
+              [(ngModel)]="caption"
+              name="message"
+              placeholder="Type something..."
+              class="w-full rounded-lg p-2 text-sm bg-gray-100 border border-transparent appearance-none rounded-tg placeholder-gray-400"
+            ></textarea>
+            <footer class="flex justify-between mt-2">
+              <div class="flex gap-2">
                 <!-- Image pour ouvrir la boîte de dialogue de sélection de fichier -->
-                <label for="fileInput" class="flex items-center transition ease-out duration-300 hover:bg-blue-500 hover:text-white bg-blue-100 w-8 h-8 px-2 rounded-full text-blue-400 cursor-pointer">
-                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                        <circle cx="8.5" cy="8.5" r="1.5"></circle>
-                        <polyline points="21 15 16 10 5 21"></polyline>
-                    </svg>
+                <label
+                  for="fileInput"
+                  class="flex items-center transition ease-out duration-300 hover:bg-blue-500 hover:text-white bg-blue-100 w-8 h-8 px-2 rounded-full text-blue-400 cursor-pointer"
+                >
+                  <svg
+                    viewBox="0 0 24 24"
+                    width="24"
+                    height="24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="css-i6dzq1"
+                  >
+                    <rect
+                      x="3"
+                      y="3"
+                      width="18"
+                      height="18"
+                      rx="2"
+                      ry="2"
+                    ></rect>
+                    <circle cx="8.5" cy="8.5" r="1.5"></circle>
+                    <polyline points="21 15 16 10 5 21"></polyline>
+                  </svg>
                 </label>
                 <!-- Input hidden pour la sélection de fichier -->
-                <input id="fileInput" type="file" style="display: none" (change)="onFileSelected($event)">
-                <span class="flex items-center transition ease-out duration-300 hover:bg-blue-500 hover:text-white bg-blue-100 w-8 h-8 px-2 rounded-full text-blue-400 cursor-pointer">
-                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+                <input
+                  id="fileInput"
+                  type="file"
+                  style="display: none"
+                  (change)="onFileSelected($event)"
+                />
+                <span
+                  class="flex items-center transition ease-out duration-300 hover:bg-blue-500 hover:text-white bg-blue-100 w-8 h-8 px-2 rounded-full text-blue-400 cursor-pointer"
+                >
+                  <svg
+                    viewBox="0 0 24 24"
+                    width="24"
+                    height="24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="css-i6dzq1"
+                  >
+                    <path
+                      d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
+                    ></path>
+                    <circle cx="12" cy="10" r="3"></circle>
+                  </svg>
                 </span>
-                <span class="flex items-center transition ease-out duration-300 hover:bg-blue-500 hover:text-white bg-blue-100 w-8 h-8 px-2 rounded-full text-blue-400 cursor-pointer">
-                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><polyline points="4 17 10 11 4 5"></polyline><line x1="12" y1="19" x2="20" y2="19"></line></svg>
+                <span
+                  class="flex items-center transition ease-out duration-300 hover:bg-blue-500 hover:text-white bg-blue-100 w-8 h-8 px-2 rounded-full text-blue-400 cursor-pointer"
+                >
+                  <svg
+                    viewBox="0 0 24 24"
+                    width="24"
+                    height="24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="css-i6dzq1"
+                  >
+                    <polyline points="4 17 10 11 4 5"></polyline>
+                    <line x1="12" y1="19" x2="20" y2="19"></line>
+                  </svg>
                 </span>
-            </div>
-            <button (click)="createPost()" class="flex items-center py-2 px-4 rounded-lg text-sm bg-blue-600 text-white shadow-lg">Save
-                
-            </button>
-        </footer>
-    </form>
-                <app-post class="p-4 mb-5" *ngFor="let post of posts" [postData]="post"></app-post>
-   
-            </div>
+              </div>
+              <button
+                (click)="createPost()"
+                class="flex items-center py-2 px-4 rounded-lg text-sm bg-blue-600 text-white shadow-lg"
+              >
+                Save
+              </button>
+            </footer>
+          </form>
+          <app-post
+            class="p-4 mb-5"
+            *ngFor="let post of posts"
+            [postData]="post"
+          ></app-post>
         </div>
-
-
+      </div>
     </div>
 
- 
     <div class="footer">
-        <p>Copyright 2023 - #Oday Darwish</p>
+      <p>Copyright 2023 - #Oday Darwish</p>
     </div>
-
-
-
-</body>
+  </body>
 </html>
